Set platform to php 7.4

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
     "minimum-stability": "dev",
     "require": {},
     "config": {
+        "platform": {
+            "php": "7.4"
+        },
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
